--- a/ElevationMap.Altimeter/App.xaml
+++ b/ElevationMap.Altimeter/App.xaml
@@ -2,11 +2,13 @@
     x:Class="ElevationMap.Altimeter.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:converters="clr-namespace:NV.ElevationMap.Altimeter.Converters">
 
     <!--Application Resources-->
     <Application.Resources>
+        <converters:FormatConverter x:Key="FormatConverter" />
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
