Tracker View - Start/Stop buttons

--- a/ElevationMap.Altimeter/App.xaml
+++ b/ElevationMap.Altimeter/App.xaml
@@ -7,8 +7,9 @@
 
     <!--Application Resources-->
     <Application.Resources>
-        <converters:FormatConverter x:Key="FormatConverter" />
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter" />
+        <converters:FormatConverter x:Key="FormatConverter" />
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
