--- a/ElevationMap.Altimeter/Views/Tracker/TrackerView.xaml
+++ b/ElevationMap.Altimeter/Views/Tracker/TrackerView.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="NV.ElevationMap.Altimeter.Views.Tracker.Tracker"
+﻿<Grid x:Class="NV.ElevationMap.Altimeter.Views.Tracker.TrackerView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,11 +7,11 @@
       mc:Ignorable="d"
       d:DesignHeight="480" d:DesignWidth="480">
     <Grid.Resources>
-        <system:String x:Key="LatitudeFormat">Latitude: {0:X6}°</system:String>
-        <system:String x:Key="LongitudeFormat">Longitude: {0:X6}°</system:String>
-        <system:String x:Key="AltitudeFormat">Altitude: {0:X2}m</system:String>
-        <system:String x:Key="HorizontalAccuracyFormat">Horizontal: {0:X2}m</system:String>
-        <system:String x:Key="VerticalAccuracyFormat">Vertical: {0:X2}m</system:String>
+        <system:String x:Key="LatitudeFormat">Latitude: {0:F6}°</system:String>
+        <system:String x:Key="LongitudeFormat">Longitude: {0:F6}°</system:String>
+        <system:String x:Key="AltitudeFormat">{0:F2} m</system:String>
+        <system:String x:Key="HorizontalAccuracyFormat">Horizontal: {0:F2} m</system:String>
+        <system:String x:Key="VerticalAccuracyFormat">Vertical: {0:F2} m</system:String>
         <system:String x:Key="TimestampFormat">Timestamp: {0}</system:String>
         <system:String x:Key="TrackerStateFormat">Tracker state: {0}</system:String>
     </Grid.Resources>
@@ -30,13 +30,15 @@
         <ColumnDefinition Width="*"/>
     </Grid.ColumnDefinitions>
     
-    <TextBlock Text="{Binding Latitude, Converter={StaticResource FormatConverter},
+    <TextBlock Grid.Row="0"  Grid.Column="0" Text="{Binding Latitude, Converter={StaticResource FormatConverter},
                                         ConverterParameter={StaticResource LatitudeFormat}}"/>
     <TextBlock Grid.Row="0" Grid.Column="1"
         Text="{Binding Longitude, Converter={StaticResource FormatConverter},
                                   ConverterParameter={StaticResource LongitudeFormat}}"/>
     
     <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+               HorizontalAlignment="Center" VerticalAlignment="Center"
+               FontSize="60"
                Text="{Binding Altitude, Converter={StaticResource FormatConverter}, 
                                         ConverterParameter={StaticResource AltitudeFormat}}"/>
     
@@ -63,7 +65,7 @@
     
     <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" 
             Command="{Binding Start}" 
-            Visibility="{Binding IsRunnging, Converter={StaticResource InverseBoolToVisibilityConverter}}">
+            Visibility="{Binding IsRunning, Converter={StaticResource InverseBoolToVisibilityConverter}}">
         Start
     </Button>
     
