--- a/ElevationMap.Altimeter/Views/Setings/SettingsView.xaml
+++ b/ElevationMap.Altimeter/Views/Setings/SettingsView.xaml
@@ -3,7 +3,13 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:setings="clr-namespace:NV.ElevationMap.Altimeter.Views.Setings"
       mc:Ignorable="d"
       d:DesignHeight="480" d:DesignWidth="480">
-    
+      <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
+    <setings:DesiredAccuracyView DataContext="{Binding DesiredAccuracy}"/>
 </Grid>
+    
