Refactoring: * some models combined in Kernel class to enlarge lifetime * Setting model created - SetingsVM Simplified * fiexd some code analysis issues found by resharper

--- a/ElevationMap.Altimeter/MainPage.xaml
+++ b/ElevationMap.Altimeter/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="ElevationMap.Altimeter.MainPage"
+    x:Class="NV.ElevationMap.Altimeter.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
