Buffer: free space in megabytes

--- a/ElevationMap.Altimeter/Views/Setings/BufferView.xaml
+++ b/ElevationMap.Altimeter/Views/Setings/BufferView.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="480" d:DesignWidth="480">
     <StackPanel.Resources>
         <system:String x:Key="ItemsCountFormat" >Items buffered: {0}</system:String>
-        <system:String x:Key="SpaceAvailableFormat">Space Available: {0} Mb</system:String>
+        <system:String x:Key="SpaceAvailableFormat">Space Available: {0:F2} Mb</system:String>
     </StackPanel.Resources>
     <TextBlock Text="{Binding Count, StringFormat={StaticResource ItemsCountFormat}}"/>
     <TextBlock Text="{Binding SpaceAvailable, StringFormat={StaticResource SpaceAvailableFormat}}"/>
